--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Kire Mitrov.</p>
             <img class="portrait" src="/images/second.jpg" alt="">
         </div>        
         {{>footer}}
