--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
         <div class="main-content">
             {{>header}}
             <p>This site was created by Kire Mitrov.</p>
-            <img class="portrait" src="/images/second.jpg" alt="">
+            <img class="portrait" src="/images/profilep.jpg" alt="">
         </div>        
         {{>footer}}
     </body>
